--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Open Graph Meta Tags / Facebook -->
     <meta property="og:title" content="Vijay Singh - Frontend Web Developer">
     <meta property="og:description" content="Passionate about crafting beautiful and responsive websites. Explore my portfolio and blog for tech insights.">
-    <meta property="og:image" content="assets/images/banner.webp">
+    <meta property="og:image" content="./assets/images/banner.webp">
     <meta property="og:url" content="/">
     <meta property="og:type" content="website">
 
@@ -23,27 +23,27 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Vijay Singh - Frontend Web Developer">
     <meta name="twitter:description" content="Passionate about crafting beautiful and responsive websites. Explore my portfolio and blog for tech insights.">
-    <meta name="twitter:image" content="assets/images/banner.webp">
+    <meta name="twitter:image" content="./assets/images/banner.webp">
 
     <!-- Favicon -->
-    <link rel="icon" href="assets/images/vj.webp" type="image/x-icon">
+    <link rel="icon" href="./assets/images/vj.webp" type="image/x-icon">
 
     <!-- Google Fonts: Rubik -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik&amp;display=swap">
 
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="assets/css/aos.css">
-    <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/aos.css">
+    <link rel="stylesheet" href="./assets/css/owl.carousel.min.css">
+    <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./assets/css/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
 
     <!-- Preload Important resources -->
-    <link rel="preload" href="assets/css/aos.css" as="style" >
-    <link rel="preload" href="assets/css/owl.carousel.min.css" as="style" >
-    <link rel="preload" href="assets/css/bootstrap.min.css" as="style" />
-    <link rel="preload" href="assets/css/bootstrap-icons.min.css" as="style" />
-    <link rel="preload" href="assets/css/style.css" as="style" />
+    <link rel="preload" href="./assets/css/aos.css" as="style" >
+    <link rel="preload" href="./assets/css/owl.carousel.min.css" as="style" >
+    <link rel="preload" href="./assets/css/bootstrap.min.css" as="style" />
+    <link rel="preload" href="./assets/css/bootstrap-icons.min.css" as="style" />
+    <link rel="preload" href="./assets/css/style.css" as="style" />
 
     <!-- MS-Clarity Analytics -->
     <script type="text/javascript">
@@ -60,7 +60,7 @@
 
     <!-- Preloader -->
     <div id="preloader">
-        <img src="assets/images/loader.gif" alt="Loading.....">
+        <img src="./assets/images/loader.gif" alt="Loading.....">
 
     </div>
     
@@ -189,7 +189,7 @@
             <p class="text-center muted-text mt-3 mb-4">“Coding Curiosity, Creativity & Community"</p>
             <div class="row justify-content-center" data-aos="fade-down" data-aos-delay="200">
                 <div class="col-lg-5 about-portrait">
-                    <img src="assets/images/NSR2.png" class="img-fluid pic" alt="About Me Portrait">
+                    <img src="./assets/images/NSR2.png" class="img-fluid pic" alt="About Me Portrait">
                 </div>
                 <div class="col-lg-7">
                     <p class="bio">
@@ -214,38 +214,38 @@
             <div class="row justify-content-center row-cols-2 row-cols-md-3 row-cols-lg-6 mt-4 gy-4 skills-container" data-aos="fade-up" data-aos-delay="200">
                 <div class="col">
                     <div class="skill">
-                        <img class="skill-image" src="/assets/images/skills/Python.svg" alt="Python">
+                        <img class="skill-image" src="./assets/images/skills/Python.svg" alt="Python">
                         <p class="skill-name">Python</p>
                     </div>
                 </div>              
                 <div class="col">
                     <div class="skill">
-                        <img class="skill-image" src="/assets/images/skills/HTML.svg" alt="HTML">
+                        <img class="skill-image" src="./assets/images/skills/HTML.svg" alt="HTML">
                         <p class="skill-name">HTML</p>
                     </div>
                 </div>
                 <div class="col">
                     <div class="skill">
-                        <img class="skill-image" src="/assets/images/skills/CSS.svg" alt="CSS"/>
+                        <img class="skill-image" src="./assets/images/skills/CSS.svg" alt="CSS"/>
                         <p class="skill-name">CSS</p>
                     </div>
                 </div>
                 <div class="col">
                     <div class="skill">
-                        <img class="skill-image" src="/assets/images/skills/JS.svg" alt="JavaScript">
+                        <img class="skill-image" src="./assets/images/skills/JS.svg" alt="JavaScript">
                         <p class="skill-name">JS</p>
                     </div>
                 </div>
 
                 <div class="col">
                     <div class="skill">
-                        <img class="skill-image" src="assets/images/skills/mysql-icon.svg" alt="MySQL">
+                        <img class="skill-image" src="./assets/images/skills/mysql-icon.svg" alt="MySQL">
                         <p class="skill-name">MySQL</p>
                     </div>
                 </div>
                 <div class="col">
                     <div class="skill">
-                        <img class="skill-image" src="/assets/images/skills/C.svg" alt="C">
+                        <img class="skill-image" src="./assets/images/skills/C.svg" alt="C">
                         <p class="skill-name">C</p>
                     </div>
                 </div>
@@ -431,7 +431,7 @@
                             <div class="overlay">
                                 <a href="https://github.com/sridharreddy7831/NOTES_SHARING.git" class="btn" target="_blank"><i class="bi bi-arrow-up-right-circle-fill"></i></a>
                             </div>
-                            <img src="/assets/images/projects/Online Notes Sharing Platform.webp" class="card-img-top banner" alt="Online Notes Sharing Platform Banner">
+                            <img src="./assets/images/projects/Online Notes Sharing Platform.webp" class="card-img-top banner" alt="Online Notes Sharing Platform Banner">
                         </div>
                     </div>
                 </div>
@@ -457,7 +457,7 @@
                             <div class="overlay">
                                 <a href="https://github.com/sridharreddy7831/Face-Detection-and-Recognition.git" class="btn" target="_blank"><i class="bi bi-arrow-up-right-circle-fill"></i></a>
                             </div>
-                            <img src="/assets/images/projects/Face-Detection-and-Recognition.webp" class="card-img-top banner" alt="Face Detection and Recognition Banner">
+                            <img src="./assets/images/projects/Face-Detection-and-Recognition.webp" class="card-img-top banner" alt="Face Detection and Recognition Banner">
                         </div>
                     </div>
                 </div>
@@ -717,11 +717,11 @@
     </button>
 
     <!-- JavaScript -->
-    <script src="assets/js/aos.js" defer></script>
-    <script src="assets/js/jquery-3.7.1.min.js" defer></script>
-    <script src="assets/js/owl.carousel.min.js" defer></script>
-    <script src="assets/js/bootstrap.min.js" defer></script>
-    <script src="assets/js/script.js" defer></script>
+    <script src="./assets/js/aos.js" defer></script>
+    <script src="./assets/js/jquery-3.7.1.min.js" defer></script>
+    <script src="./assets/js/owl.carousel.min.js" defer></script>
+    <script src="./assets/js/bootstrap.min.js" defer></script>
+    <script src="./assets/js/script.js" defer></script>
 
 </body>
 </html>
